--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,6 @@
+body {
+  background-image: url('https://c.pxhere.com/photos/50/04/paper_background_wallpaper_texture_abstract_pattern_material_surface-1200849.jpg!d')
+}
 h3 {
   color: whitesmoke;
   background-color: salmon;
@@ -8,4 +11,48 @@ h3 {
   height: 40%;
   background-color: lightsalmon;
   margin: auto;
+}
+.title {
+  width: 80%;
+  margin: auto;
+}
+.title-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-gap: 3px;
+  list-style-type: none;
+  padding: 0;
+}
+.letter {
+  font-family: 'ZCOOL KuaiLe', cursive;
+  font-size:35px;
+  color: white;
+  background-color: rgba(204, 204, 204, 0.77);
+  border-radius: 5px;
+  padding: 15%;
+  text-align: center;
+  transition: 0.5s
+}
+.letter:hover {
+  background-color: white;
+  color: rgba(165, 216, 208, 0.77);
+}
+.color1 {
+  background-color: rgba(165, 216, 208, 0.77);
+}
+.color2 {
+  background-color: rgba(216, 165, 199, 0.77);
+}
+.color3 {
+  background-color: rgba(216, 208, 165, 0.77);
+}
+.color4 {
+  background-color: rgba(154, 171, 222, 0.77);
+}
+.icon {
+  width: 17px;
+}
+.email {
+  
 }
